Update copy on the password reset flow

--- a/synapse/res/templates/password_reset_confirmation.html
+++ b/synapse/res/templates/password_reset_confirmation.html
@@ -7,7 +7,7 @@
     <input type="hidden" name="token" value="{{ token }}">
     <input type="hidden" name="client_secret" value="{{ client_secret }}">
 
-    <p>You have requested to <strong>reset your Matrix account password</strong>. Click the link below to confirm this action. <br /><br />
+    <p>You have requested to <strong>reset your Beeper account password</strong>. Click the link below to confirm this action. <br /><br />
         If you did not mean to do this, please close this page and your password will not be changed.</p>
     <p><button type="submit">Confirm changing my password</button></p>
 </form>
