--- a/synapse/res/templates/password_reset.html
+++ b/synapse/res/templates/password_reset.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-    <p>A password reset request has been received for your Matrix account. If this was you, please click the link below to confirm resetting your password:</p>
+    <p>A password reset request has been received for your Beeper account. If this was you, please click the link below to confirm resetting your password:</p>
 
     <a href="{{ link }}">{{ link }}</a>
 
-    <p>If this was not you, <strong>do not</strong> click the link above and instead contact your server administrator. Thank you.</p>
+    <p>If this was not you, <strong>do not</strong> click the link above and instead contact the Beeper Support team. Thank you.</p>
 </body>
 </html>
