--- a/scripts-dev/workers_setup/worker.yaml.j2
+++ b/scripts-dev/workers_setup/worker.yaml.j2
@@ -3,23 +3,23 @@
 worker_app: synapse.app.homeserver
 {% else %}
 worker_app: synapse.app.generic_worker
-worker_name: {{ worker_name }}
- # The replication listener on the main synapse process.
-worker_replication_host: {{ worker_ip }}
+worker_name: {{ worker.name }}
+# The replication listener on the main synapse process.
+worker_replication_host: {{ worker.ip }}
 worker_replication_http_port: 9090
- worker_listeners:
+worker_listeners:
   - type: http
     port: 8080
     resources:
     - names:
-    - client
-    - federation
+      - client
+      - federation
 {% if worker.kind == "media" %}
-    - media
+      - media
 {% endif %}
 
-worker_log_config: '{{ workers_dir }}/{{ worker_name }}.logging.yaml'
-worker_pid_file: '{{ logs_dir }}/{{ worker_name }}.pid'
+worker_log_config: '{{ worker_dir }}.logging/{{ worker.name }}.logging.yaml'
+worker_pid_file: '{{ logs_dir }}/{{ worker.name }}.pid'
 {% endif %}
 
 {% set main_worker = workers_by_name.main %}
