--- a/scripts-dev/workers_setup/worker.yaml.j2
+++ b/scripts-dev/workers_setup/worker.yaml.j2
@@ -1,26 +1,36 @@
-{# TODO worker apps! #}
+{% set main_worker = workers_by_name.main %}
+
 {% if worker.kind == "main" %}
+
 worker_app: synapse.app.homeserver
+
 {% else %}
+
 worker_app: synapse.app.generic_worker
 worker_name: {{ worker.name }}
 # The replication listener on the main synapse process.
-worker_replication_host: {{ worker.ip }}
+worker_replication_host: {{ main_worker.ip }}
 worker_replication_http_port: 9090
 worker_listeners:
   - type: http
+    bind_address: {{ worker.ip }}
     port: 8080
     resources:
     - names:
       - client
       - federation
-{% if worker.kind == "media" %}
+{%- if worker.kind == "media" %}
       - media
-{% endif %}
+{%- endif %}
+  - type: http
+    bind_address: {{ worker.ip }}
+    port: 9090
+    resources:
+    - names: [replication]
 
 worker_log_config: '{{ worker_dir }}.logging/{{ worker.name }}.logging.yaml'
 worker_pid_file: '{{ logs_dir }}/{{ worker.name }}.pid'
-{% endif %}
 
-{% set main_worker = workers_by_name.main %}
 worker_main_http_uri: http://{{ main_worker.ip }}:8080
+
+{% endif %}
