Fix running background tasks on BG worker

--- a/scripts-dev/workers_setup/homeserver.yaml.j2
+++ b/scripts-dev/workers_setup/homeserver.yaml.j2
@@ -92,3 +92,5 @@ update_user_directory: False
 pid_file: "{{ logs_dir }}/main.pid"
 
 log_config: '{{ worker_dir }}.logging/main.logging.yaml'
+
+run_background_tasks_on: background_worker1
