Reword as 'Choose your account name'

--- a/synapse/res/templates/sso_auth_account_details.html
+++ b/synapse/res/templates/sso_auth_account_details.html
@@ -130,7 +130,7 @@
   </head>
   <body>
     <header>
-      <h1>Choose your user name</h1>
+      <h1>Choose your account name</h1>
       <p>This is required to create your account on {{ server_name }}, and you can't change this later.</p>
     </header>
     <main>
